--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -3,10 +3,12 @@
     justify-content: space-evenly;
 }
 
+h1, p {
+    text-align: center;
+}
+
 .nav-container {
-    /* justify-self: flex-start;
-    align-self: flex-start; */
-    width: 30%;
+    width: 28%;
 }
 
 .navbar {
@@ -15,18 +17,42 @@
 
 .list-group {
     width: 100%;
+    /* height: 75%; */
 }
 
 .forecast-container {
     display: flex;
     flex-direction: column;
+    margin-top: 5%;
+    width: 100%;
+}
+
+h2 {
+    margin: 1%;
 }
 
 .forecast-cards {
     display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .card {
-    margin: 1%;
-    padding: 1%;;
+    margin: 2%;
+    padding: 1%;
+    
+}
+
+.featured {
+    height: 70%;
+}
+
+.daily {
+    height: 10rem;
+    width: 8rem;
+}
+
+#featured-city {
+    width: 100%;
+    
 }
