--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -3,7 +3,7 @@
     justify-content: space-evenly;
 }
 
-h1, p {
+.header-info {
     text-align: center;
 }
 
@@ -19,6 +19,12 @@ h1, p {
 .list-group {
     width: 100%;
     /* height: 75%; */
+}
+
+#card-container {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
 }
 
 .forecast-container {
@@ -38,22 +44,16 @@ h2 {
     width: 170px;
 }
 
-.forecast-cards {
-    display: flex;
-    width: 100%;
-    height: 100%;
-}
+
 
 .card {
-    margin: 2%;
-    padding: 1%;
+    margin: 1%;
     
 }
 
 .featured {
     height: 55%;
     width: 100%;
-
 }
 
 .header-div {
@@ -89,12 +89,23 @@ h6 {
     margin: 3%;
 }
 
-.daily {
-    height: 10rem;
-    width: 8rem;
+.forecast-cards {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 65%;
 }
 
-#icon0 {
+.daily {
+ width: 20%;
+ height: 100%;
+}
+
+.card-body p {
+    font-size: .75rem;
+}
+
+.icon {
     height: 25%;
     text-align: center;
 }
