--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,10 +1,24 @@
 .body-container {
     display: flex;
     justify-content: space-evenly;
+    background-image: url(../Images/beach\ \(3\).jpeg);
+    background-size: cover;
+
+}
+
+.jumbotron {
+    margin-bottom: 0rem;
+    color: white;
+    background-image: url(../Images/beach\ \(2\).jpeg);
+    background-size: cover;
 }
 
 .header-info {
     text-align: center;
+}
+
+.body-container {
+    
 }
 
 .nav-container {
@@ -14,11 +28,12 @@
 .navbar {
     width: 100%;
     justify-content: center;
+    border-radius: 15px;
 }
+
 
 .list-group {
     width: 100%;
-    /* height: 75%; */
 }
 
 #card-container {
@@ -38,10 +53,10 @@ h2 {
     margin: 1%;
 }
 
-
 #search-bar {
     display: block;
     width: 170px;
+    
 }
 
 .button-div {
@@ -50,12 +65,15 @@ h2 {
 
 .card {
     margin: 1%;
+    border-radius: 15px;
     
 }
 
 .featured {
     height: 55%;
     width: 100%;
+    margin-top: 0rem;
+    border-radius: 15px;
 }
 
 .header-div {
