--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,6 +1,6 @@
 :root {
     --cream: #fffdf7;
-    --other: #d8e2dc;
+    --soft-green: #d8e2dc;
 }
 
 .body-container {
@@ -13,11 +13,10 @@
 
 .jumbotron {
     margin-bottom: 0rem;
-    color: white;
+    color: var(--cream);
     background-image: url(../Images/beach\ \(2\).jpeg);
     background-size: cover;
     font-family: 'Shrikhand', cursive;
-
 }
 
 #dashboard {
@@ -40,20 +39,32 @@
     justify-content: center;
     border-radius: 15px;
     margin: 0rem 2% 4% 2%;
-    background-color: var(--other);
+    background-color: var(--soft-green);
 }
 
 .form-control{
     background-color: var(--cream);
 }
 
-
 .list-group {
     width: 100%;
 }
 
 .list-group-item {
-    background-color: var(--other);
+    background-color: var(--soft-green);
+}
+
+.btn {
+    background-color:#6c757d;
+}
+
+.btn-outline-success {
+    color: white;
+    border: white;
+}
+
+.btn:hover {
+    background-color:#00afb9;
 }
 
 #card-container {
@@ -66,10 +77,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-}
-
-h2 {
-    margin: 1%;
 }
 
 #search-bar {
@@ -85,7 +92,7 @@ h2 {
 .card {
     margin: 1%;
     border-radius: 15px;
-    background-color: var(--other);
+    background-color: var(--soft-green);
     
 }
 
@@ -94,7 +101,7 @@ h2 {
     width: 90%;
     margin: 0rem 5% 5% 5%;
     border-radius: 15px;
-    background-color: var(--other);
+    background-color: var(--soft-green);
     
 }
 
@@ -106,12 +113,17 @@ h2 {
 
 #current-date {
     margin-left: 3%;
+    text-align: center;
+    border-radius: 10px;
+    background-color: var(--cream);
+    font-size: 1.25rem;
 }
 
 #city-name {
     margin: 3%;
     display: inline;
     height: 100%;
+    font-size: 2rem;
 }
 
 #uv {
@@ -134,6 +146,7 @@ img {
 h6 {
     padding: 3%;
     margin: 3%;
+    font-size: 1.2rem;
 }
 
 .forecast-cards {
@@ -143,6 +156,13 @@ h6 {
     height: 65%;
 }
 
+h2 {
+    margin: 1%;
+    color: var(--cream);
+    font-family: 'Shrikhand', cursive;
+
+}
+
 .daily {
  width: 20%;
  height: 100%;
@@ -150,6 +170,7 @@ h6 {
 
 .card-body p {
     font-size: .85rem;
+    color: #6c757d;
 }
 
 .icon {
