--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,6 +1,7 @@
 :root {
     --cream: #fffdf7;
     --soft-green: #d8e2dc;
+    --gray: #6c757d;
 }
 
 .body-container {
@@ -55,7 +56,7 @@
 }
 
 .btn {
-    background-color:#6c757d;
+    background-color:var(--gray);
 }
 
 .btn-outline-success {
@@ -112,10 +113,11 @@
 }
 
 #current-date {
-    margin-left: 3%;
+    padding: 1%;
     text-align: center;
     border-radius: 10px;
-    background-color: var(--cream);
+    background-color: var(--gray);
+    color: var(--cream);
     font-size: 1.25rem;
 }
 
@@ -154,10 +156,12 @@ h6 {
     flex-wrap: nowrap;
     width: 100%;
     height: 65%;
+    margin: 1%;
 }
 
 h2 {
     margin: 1%;
+    padding-left: 2%;
     color: var(--cream);
     font-family: 'Shrikhand', cursive;
 
@@ -170,7 +174,7 @@ h2 {
 
 .card-body p {
     font-size: .85rem;
-    color: #6c757d;
+    color: var(--gray);
 }
 
 .icon {
